# heatshimmer

./: .gitignore  CMakeLists.txt  README.md  flake.nix
source/: main.cpp
source/file/: netpbm.cpp
source/math/: hash.cpp  mat.cpp  mat.h  vec.cpp  vec.h
source/render/: error.cpp  hid.cpp  hid.h  model.cpp  model.h  renderer.cpp  renderer.h  util.cpp  util.h
source/render/vulkan/: cmd_buffer.cpp  cmd_buffer.h  device.cpp  instance.cpp  pipeline.cpp  swapchain.cpp  swapchain.h  vertex.h
source/shader/: base.frag  base.vert
source/structure/: object.cpp  object.h  world.cpp  world.h
src/: main.cpp
src/file/: netpbm.h
src/math/: hash.cpp  hash.h  vec.h
src/render/: error.h  hid.h  renderer.cpp  util.cpp  util.h
src/render/vulkan/: device.cpp  device.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  uniform.h
src/structure/: object.cpp  object.h
